Examples/CPP_GeometryKernel/Engine/engine.h



//
//		GetNameOfInstanceEx                         (http://rdf.bg/gkdoc/CP64/GetNameOfInstanceEx.html)
//				int64_t				model								IN
//				int64_t				owlInstance							IN
//				char				** name								IN / OUT
//
//				void				returns
//
//	Returns the name of the instance, if the instance does not exist it returns nullptr.
//
void		DECL STDC	GetNameOfInstanceEx(
									int64_t				model,
									int64_t				owlInstance,
									char				** name
								);


//
//		GetNameOfInstanceWEx                        (http://rdf.bg/gkdoc/CP64/GetNameOfInstanceWEx.html)
//				int64_t				model								IN
//				int64_t				owlInstance							IN
//				wchar_t				** name								IN / OUT
//
//				void				returns
//
//	Returns the name of the instance, if the instance does not exist it returns nullptr.
//
void		DECL STDC	GetNameOfInstanceWEx(
									int64_t				model,
									int64_t				owlInstance,
									wchar_t				** name
								);


//
//		SetDatatypeProperty                         (http://rdf.bg/gkdoc/CP64/SetDatatypeProperty.html)
//				int64_t				owlInstance							IN
//				int64_t				rdfProperty							IN
//				const void			* values							IN
//				int64_t				card								IN
//
//				int64_t				returns								OUT
//
//	This function sets the value(s) of a certain datatypeTypeProperty
//	in the context of an instance.
//	The value of card gives the actual card of the values list.
//	The list values of undefined (void) items is a list of booleans, chars, integers
//	or doubles, this list has a length as givin in the values card. The actual used type
//	is given by the definition of the dataTypeProperty.
//	The return value always should be 0, if not something is wrong in the way this property is called.
//
//	Note: the client application needs to make sure the cardinality of
//		  the property is within the boundaries.
//
int64_t		DECL STDC	SetDatatypeProperty(
									int64_t				owlInstance,
									int64_t				rdfProperty,
									const void			* values,
									int64_t				card
								);


//
//		SetDatatypePropertyEx                       (http://rdf.bg/gkdoc/CP64/SetDatatypePropertyEx.html)
//				int64_t				model								IN
//				int64_t				owlInstance							IN
//				int64_t				rdfProperty							IN
//				const void			* values							IN
//				int64_t				card								IN
//
//				int64_t				returns								OUT
//
//	This function sets the value(s) of a certain datatypeTypeProperty
//	in the context of an instance.
//	The value of card gives the actual card of the values list.
//	The list values of undefined (void) items is a list of booleans, chars, integers
//	or doubles, this list has a length as givin in the values card. The actual used type
//	is given by the definition of the dataTypeProperty.
//	The return value always should be 0, if not something is wrong in the way this property is called.
//
//	This call has the same behavior as SetDatatypeProperty, however needs to be
//	used in case properties are exchanged as a successive series of integers.
//
//	Note: the client application needs to make sure the cardinality of
//		  the property is within the boundaries.
//
int64_t		DECL STDC	SetDatatypePropertyEx(
									int64_t				model,
									int64_t				owlInstance,
									int64_t				rdfProperty,
									const void			* values,
									int64_t				card
								);


//
//		GetDatatypeProperty                         (http://rdf.bg/gkdoc/CP64/GetDatatypeProperty.html)
//				int64_t				owlInstance							IN
//				int64_t				rdfProperty							IN
//				void				** values							IN / OUT
//				int64_t				* card								IN / OUT
//
//				int64_t				returns								OUT
//
//	This function gets the value(s) of a certain datatypeTypeProperty
//	in the context of an instance.
//	The value of card gives the actual card of the values list.
//	The list values of undefined (void) items is a list of booleans, chars, integers
//	or doubles, this list has a length as givin in the value card. The actual used type
//	is given by the definition of the dataTypeProperty.
//	The return value always should be 0, if not something is wrong in the way this property is called.
//
int64_t		DECL STDC	GetDatatypeProperty(
									int64_t				owlInstance,
									int64_t				rdfProperty,
									void				** values,
									int64_t				* card
								);


//
//		GetDatatypePropertyEx                       (http://rdf.bg/gkdoc/CP64/GetDatatypePropertyEx.html)
//				int64_t				model								IN
//				int64_t				owlInstance							IN
//				int64_t				rdfProperty							IN
//				void				** values							IN / OUT
//				int64_t				* card								IN / OUT
//
//				int64_t				returns								OUT
//
//	This function gets the value(s) of a certain datatypeTypeProperty
//	in the context of an instance.
//	The value of card gives the actual card of the values list.
//	The list values of undefined (void) items is a list of booleans, chars, integers
//	or doubles, this list has a length as givin in the value card. The actual used type
//	is given by the definition of the dataTypeProperty.
//	The return value always should be 0, if not something is wrong in the way this property is called.
//
//	This call has the same behavior as GetDatatypeProperty, however needs to be
//	used in case properties are exchanged as a successive series of integers.
//
int64_t		DECL STDC	GetDatatypePropertyEx(
									int64_t				model,
									int64_t				owlInstance,
									int64_t				rdfProperty,
									void				** values,
									int64_t				* card
								);


//
//		SetObjectProperty                           (http://rdf.bg/gkdoc/CP64/SetObjectProperty.html)
//				int64_t				owlInstance							IN
//				int64_t				rdfProperty							IN
//				const int64_t		* values							IN
//				int64_t				card								IN
//
//				int64_t				returns								OUT
//
//	This function sets the value(s) of a certain objectTypeProperty
//	in the context of an instance.
//	The value of card gives the actual card of the values list.
//	The list values of integers is a list of handles to instances, this list
//	has a length as givin in the values card.
//	The return value always should be 0, if not something is wrong in the way this property is called.
//
//	Note: the client application needs to make sure the cardinality of
//		  the property is within the boundaries.
//
int64_t		DECL STDC	SetObjectProperty(
									int64_t				owlInstance,
									int64_t				rdfProperty,
									const int64_t		* values,
									int64_t				card
								);


//
//		SetObjectPropertyEx                         (http://rdf.bg/gkdoc/CP64/SetObjectPropertyEx.html)
//				int64_t				model								IN
//				int64_t				owlInstance							IN
//				int64_t				rdfProperty							IN
//				const int64_t		* values							IN
//				int64_t				card								IN
//
//				int64_t				returns								OUT
//
//	This function sets the value(s) of a certain objectTypeProperty
//	in the context of an instance.
//	The value of card gives the actual card of the values list.
//	The list values of integers is a list of handles to instances, this list
//	has a length as givin in the values card.
//	The return value always should be 0, if not something is wrong in the way this property is called.
//
//	This call has the same behavior as SetObjectProperty, however needs to be
//	used in case properties are exchanged as a successive series of integers.
//
//	Note: the client application needs to make sure the cardinality of
//		  the property is within the boundaries.
//
int64_t		DECL STDC	SetObjectPropertyEx(
									int64_t				model,
									int64_t				owlInstance,
									int64_t				rdfProperty,
									const int64_t		* values,
									int64_t				card
								);


//
//		GetObjectProperty                           (http://rdf.bg/gkdoc/CP64/GetObjectProperty.html)
//				int64_t				owlInstance							IN
//				int64_t				rdfProperty							IN
//				int64_t				** values							IN / OUT
//				int64_t				* card								IN / OUT
//
//				int64_t				returns								OUT
//
//	This function gets the value(s) of a certain objectProperty
//	in the context of an instance.
//	The value of card gives the actual card of the values list.
//	The list values of integers is a list of handles to instances, this list
//	has a length as givin in the value card.
//	The return value always should be 0, if not something is wrong in the way this property is called.
//
int64_t		DECL STDC	GetObjectProperty(
									int64_t				owlInstance,
									int64_t				rdfProperty,
									int64_t				** values,
									int64_t				* card
								);


//
//		GetObjectPropertyEx                         (http://rdf.bg/gkdoc/CP64/GetObjectPropertyEx.html)
//				int64_t				model								IN
//				int64_t				owlInstance							IN
//				int64_t				rdfProperty							IN
//				int64_t				** values							IN / OUT
//				int64_t				* card								IN / OUT
//
//				int64_t				returns								OUT
//
//	This function gets the value(s) of a certain objectProperty
//	in the context of an instance.
//	The value of card gives the actual card of the values list.
//	The list values of integers is a list of handles to instances, this list
//	has a length as givin in the values card.
//	The return value always should be 0, if not something is wrong in the way this property is called.
//
//	This call has the same behavior as GetObjectProperty, however needs to be
//	used in case properties are exchanged as a successive series of integers.
//
int64_t		DECL STDC	GetObjectPropertyEx(
									int64_t				model,
									int64_t				owlInstance,
									int64_t				rdfProperty,
									int64_t				** values,
									int64_t				* card
								);


//
//		CreateInstanceInContextStructure            (http://rdf.bg/gkdoc/CP64/CreateInstanceInContextStructure.html)
//				int64_t				owlInstance							IN
//
//				int64_t				returns								OUT
//
//	InstanceInContext structures give you more detailed information about
//	individual parts of the geometry of a certain instance viualized.
//	It is allowed to have more then 1 InstanceInContext structures per instance.
//	InstanceInContext structures are updated dynamically when the geometry
//	structure is updated.
//
int64_t		DECL STDC	CreateInstanceInContextStructure(
									int64_t				owlInstance
								);