engine.cs


		//
		//		GetNameOfInstanceEx                         (http://rdf.bg/gkdoc/CS64/GetNameOfInstanceEx.html)
		//
		//	Returns the name of the instance, if the instance does not exist it returns nullptr.
		//
        [DllImport(EngineDLL, EntryPoint = "GetNameOfInstanceEx")]
        public static extern void GetNameOfInstanceEx(Int64 model, Int64 owlInstance, out IntPtr name);

		//
		//		GetNameOfInstanceWEx                        (http://rdf.bg/gkdoc/CS64/GetNameOfInstanceWEx.html)
		//
		//	Returns the name of the instance, if the instance does not exist it returns nullptr.
		//
        [DllImport(EngineDLL, EntryPoint = "GetNameOfInstanceWEx")]
        public static extern void GetNameOfInstanceWEx(Int64 model, Int64 owlInstance, out IntPtr name);

		//
		//		SetDatatypeProperty                         (http://rdf.bg/gkdoc/CS64/SetDatatypeProperty.html)
		//
		//	This function sets the value(s) of a certain datatypeTypeProperty
		//	in the context of an instance.
		//	The value of card gives the actual card of the values list.
		//	The list values of undefined (void) items is a list of booleans, chars, integers
		//	or doubles, this list has a length as givin in the values card. The actual used type
		//	is given by the definition of the dataTypeProperty.
		//	The return value always should be 0, if not something is wrong in the way this property is called.
		//
		//	Note: the client application needs to make sure the cardinality of
		//		  the property is within the boundaries.
		//
        [DllImport(EngineDLL, EntryPoint = "SetDatatypeProperty")]
        public static extern Int64 SetDatatypeProperty(Int64 owlInstance, Int64 rdfProperty, ref byte values, Int64 card);

        [DllImport(EngineDLL, EntryPoint = "SetDatatypeProperty")]
        public static extern Int64 SetDatatypeProperty(Int64 owlInstance, Int64 rdfProperty, byte[] values, Int64 card);

        [DllImport(EngineDLL, EntryPoint = "SetDatatypeProperty")]
        public static extern Int64 SetDatatypeProperty(Int64 owlInstance, Int64 rdfProperty, ref Int64 values, Int64 card);

        [DllImport(EngineDLL, EntryPoint = "SetDatatypeProperty")]
        public static extern Int64 SetDatatypeProperty(Int64 owlInstance, Int64 rdfProperty, Int64[] values, Int64 card);

        [DllImport(EngineDLL, EntryPoint = "SetDatatypeProperty")]
        public static extern Int64 SetDatatypeProperty(Int64 owlInstance, Int64 rdfProperty, ref double values, Int64 card);

        [DllImport(EngineDLL, EntryPoint = "SetDatatypeProperty")]
        public static extern Int64 SetDatatypeProperty(Int64 owlInstance, Int64 rdfProperty, double[] values, Int64 card);

        [DllImport(EngineDLL, EntryPoint = "SetDatatypeProperty")]
        public static extern Int64 SetDatatypeProperty(Int64 owlInstance, Int64 rdfProperty, ref string values, Int64 card);

        [DllImport(EngineDLL, EntryPoint = "SetDatatypeProperty")]
        public static extern Int64 SetDatatypeProperty(Int64 owlInstance, Int64 rdfProperty, string[] values, Int64 card);

		//
		//		SetDatatypePropertyEx                       (http://rdf.bg/gkdoc/CS64/SetDatatypePropertyEx.html)
		//
		//	This function sets the value(s) of a certain datatypeTypeProperty
		//	in the context of an instance.
		//	The value of card gives the actual card of the values list.
		//	The list values of undefined (void) items is a list of booleans, chars, integers
		//	or doubles, this list has a length as givin in the values card. The actual used type
		//	is given by the definition of the dataTypeProperty.
		//	The return value always should be 0, if not something is wrong in the way this property is called.
		//
		//	This call has the same behavior as SetDatatypeProperty, however needs to be
		//	used in case properties are exchanged as a successive series of integers.
		//
		//	Note: the client application needs to make sure the cardinality of
		//		  the property is within the boundaries.
		//
        [DllImport(EngineDLL, EntryPoint = "SetDatatypePropertyEx")]
        public static extern Int64 SetDatatypePropertyEx(Int64 model, Int64 owlInstance, Int64 rdfProperty, ref byte values, Int64 card);

        [DllImport(EngineDLL, EntryPoint = "SetDatatypePropertyEx")]
        public static extern Int64 SetDatatypePropertyEx(Int64 model, Int64 owlInstance, Int64 rdfProperty, byte[] values, Int64 card);

        [DllImport(EngineDLL, EntryPoint = "SetDatatypePropertyEx")]
        public static extern Int64 SetDatatypePropertyEx(Int64 model, Int64 owlInstance, Int64 rdfProperty, ref Int64 values, Int64 card);

        [DllImport(EngineDLL, EntryPoint = "SetDatatypePropertyEx")]
        public static extern Int64 SetDatatypePropertyEx(Int64 model, Int64 owlInstance, Int64 rdfProperty, Int64[] values, Int64 card);

        [DllImport(EngineDLL, EntryPoint = "SetDatatypePropertyEx")]
        public static extern Int64 SetDatatypePropertyEx(Int64 model, Int64 owlInstance, Int64 rdfProperty, ref double values, Int64 card);

        [DllImport(EngineDLL, EntryPoint = "SetDatatypePropertyEx")]
        public static extern Int64 SetDatatypePropertyEx(Int64 model, Int64 owlInstance, Int64 rdfProperty, double[] values, Int64 card);

        [DllImport(EngineDLL, EntryPoint = "SetDatatypePropertyEx")]
        public static extern Int64 SetDatatypePropertyEx(Int64 model, Int64 owlInstance, Int64 rdfProperty, ref string values, Int64 card);

        [DllImport(EngineDLL, EntryPoint = "SetDatatypePropertyEx")]
        public static extern Int64 SetDatatypePropertyEx(Int64 model, Int64 owlInstance, Int64 rdfProperty, string[] values, Int64 card);

		//
		//		GetDatatypeProperty                         (http://rdf.bg/gkdoc/CS64/GetDatatypeProperty.html)
		//
		//	This function gets the value(s) of a certain datatypeTypeProperty
		//	in the context of an instance.
		//	The value of card gives the actual card of the values list.
		//	The list values of undefined (void) items is a list of booleans, chars, integers
		//	or doubles, this list has a length as givin in the value card. The actual used type
		//	is given by the definition of the dataTypeProperty.
		//	The return value always should be 0, if not something is wrong in the way this property is called.
		//
        [DllImport(EngineDLL, EntryPoint = "GetDatatypeProperty")]
        public static extern Int64 GetDatatypeProperty(Int64 owlInstance, Int64 rdfProperty, out IntPtr values, out Int64 card);

		//
		//		GetDatatypePropertyEx                       (http://rdf.bg/gkdoc/CS64/GetDatatypePropertyEx.html)
		//
		//	This function gets the value(s) of a certain datatypeTypeProperty
		//	in the context of an instance.
		//	The value of card gives the actual card of the values list.
		//	The list values of undefined (void) items is a list of booleans, chars, integers
		//	or doubles, this list has a length as givin in the value card. The actual used type
		//	is given by the definition of the dataTypeProperty.
		//	The return value always should be 0, if not something is wrong in the way this property is called.
		//
		//	This call has the same behavior as GetDatatypeProperty, however needs to be
		//	used in case properties are exchanged as a successive series of integers.
		//
        [DllImport(EngineDLL, EntryPoint = "GetDatatypePropertyEx")]
        public static extern Int64 GetDatatypePropertyEx(Int64 model, Int64 owlInstance, Int64 rdfProperty, out IntPtr values, out Int64 card);

		//
		//		SetObjectProperty                           (http://rdf.bg/gkdoc/CS64/SetObjectProperty.html)
		//
		//	This function sets the value(s) of a certain objectTypeProperty
		//	in the context of an instance.
		//	The value of card gives the actual card of the values list.
		//	The list values of integers is a list of handles to instances, this list
		//	has a length as givin in the values card.
		//	The return value always should be 0, if not something is wrong in the way this property is called.
		//
		//	Note: the client application needs to make sure the cardinality of
		//		  the property is within the boundaries.
		//
        [DllImport(EngineDLL, EntryPoint = "SetObjectProperty")]
        public static extern Int64 SetObjectProperty(Int64 owlInstance, Int64 rdfProperty, ref Int64 values, Int64 card);

		//
		//		SetObjectPropertyEx                         (http://rdf.bg/gkdoc/CS64/SetObjectPropertyEx.html)
		//
		//	This function sets the value(s) of a certain objectTypeProperty
		//	in the context of an instance.
		//	The value of card gives the actual card of the values list.
		//	The list values of integers is a list of handles to instances, this list
		//	has a length as givin in the values card.
		//	The return value always should be 0, if not something is wrong in the way this property is called.
		//
		//	This call has the same behavior as SetObjectProperty, however needs to be
		//	used in case properties are exchanged as a successive series of integers.
		//
		//	Note: the client application needs to make sure the cardinality of
		//		  the property is within the boundaries.
		//
        [DllImport(EngineDLL, EntryPoint = "SetObjectPropertyEx")]
        public static extern Int64 SetObjectPropertyEx(Int64 model, Int64 owlInstance, Int64 rdfProperty, ref Int64 values, Int64 card);

		//
		//		GetObjectProperty                           (http://rdf.bg/gkdoc/CS64/GetObjectProperty.html)
		//
		//	This function gets the value(s) of a certain objectProperty
		//	in the context of an instance.
		//	The value of card gives the actual card of the values list.
		//	The list values of integers is a list of handles to instances, this list
		//	has a length as givin in the value card.
		//	The return value always should be 0, if not something is wrong in the way this property is called.
		//
        [DllImport(EngineDLL, EntryPoint = "GetObjectProperty")]
        public static extern Int64 GetObjectProperty(Int64 owlInstance, Int64 rdfProperty, out IntPtr values, out Int64 card);

		//
		//		GetObjectPropertyEx                         (http://rdf.bg/gkdoc/CS64/GetObjectPropertyEx.html)
		//
		//	This function gets the value(s) of a certain objectProperty
		//	in the context of an instance.
		//	The value of card gives the actual card of the values list.
		//	The list values of integers is a list of handles to instances, this list
		//	has a length as givin in the values card.
		//	The return value always should be 0, if not something is wrong in the way this property is called.
		//
		//	This call has the same behavior as GetObjectProperty, however needs to be
		//	used in case properties are exchanged as a successive series of integers.
		//
        [DllImport(EngineDLL, EntryPoint = "GetObjectPropertyEx")]
        public static extern Int64 GetObjectPropertyEx(Int64 model, Int64 owlInstance, Int64 rdfProperty, out IntPtr values, out Int64 card);

		//
		//		CreateInstanceInContextStructure            (http://rdf.bg/gkdoc/CS64/CreateInstanceInContextStructure.html)
		//
		//	InstanceInContext structures give you more detailed information about
		//	individual parts of the geometry of a certain instance viualized.
		//	It is allowed to have more then 1 InstanceInContext structures per instance.
		//	InstanceInContext structures are updated dynamically when the geometry
		//	structure is updated.
		//
        [DllImport(EngineDLL, EntryPoint = "CreateInstanceInContextStructure")]
        public static extern Int64 CreateInstanceInContextStructure(Int64 owlInstance);
